# CleanBot_Nav

./: .gitignore  CLEANING_SYSTEM_SUMMARY.md  QUICK_START.md  QUICK_START_CLEANING.md  QUICK_START_NAVIGATION.md  QUICK_START_清扫可视化.md  QUICK_TEST_CLEANING_V2.md  QUICK_TEST_DWB.md  README.md  RViz可视化使用说明.md  RViz可视化配置说明.md  SLAM超时与状态反馈修复.md  test_map_interaction.sh  下次启动.sh  修复说明-目标队列和路径生成.md  前端地图交互增强说明.md  前端导航地图交互功能说明.md  启动指南.md  完整算法实现报告.md  实机导航配置修正说明.md  工程清理完成.md  快速测试-完整版.md  快速测试-导航修复.md  快速测试-摇杆修复.sh  快速验证修复.sh  摇杆0速度问题诊断.md  摇杆问题修复说明.md  测试SLAM超时修复.sh  测试前端地图交互.md  测试导航功能.md  测试摇杆0速度.sh  测试真实状态反馈.md  测试调试信息.sh  浏览器缓存问题解决方案.md  清扫区域与安全距离说明.md  诊断问题.md  调试信息与状态反馈完善.md  问题修复总结.md
docs/: DWB优化和平滑算法移除说明.md  DWB参数调整说明.md  README.md  SLAM超时与状态反馈修复.md  STM32 端 USB 通讯协议实现任务文档.md  URDF更新说明.md  全屋覆盖路径规划实现说明.md  前端导航功能增强.md  实机导航配置修正说明.md  导航控制系统修复报告.md  导航状态真实反馈实现.md  导航系统实现总结.md  导航系统设计文档.md  工程清理完成.md  快速测试-导航修复.md  控制架构修复报告.md  控制架构说明.md  摇杆0速度问题诊断.md  摇杆问题修复说明.md  数据流与TF树文档.md  更新说明.md  最终交付说明.md  沿边规划器优化说明.md  测试导航功能.md  测试真实状态反馈.md  测试自动全屋覆盖.md  浏览器缓存问题解决方案.md  清扫任务节点重构说明.md  清扫系统完整实现报告.md  清扫路点方向优化说明.md  系统交付清单.md  统一导航启动说明.md  编译测试报告.md  自动全屋覆盖路径规划完成报告.md  诊断问题.md  语音控制节点使用说明.md  调试信息与状态反馈完善.md  问题修复总结.md
install/: local_setup.sh  setup.sh
install/cleanbot_control/include/cleanbot_control/: cleanbot_hardware_interface.hpp
install/cleanbot_control/lib/cleanbot_control/: usb_communication_node.py  web_control_node.py
install/cleanbot_control/share/cleanbot_control/: cleanbot_control.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cleanbot_control/share/cleanbot_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  cleanbot_controlConfig-version.cmake  cleanbot_controlConfig.cmake
install/cleanbot_control/share/cleanbot_control/config/: cleanbot.ros2_control.xacro  cleanbot_controllers.yaml  cleanbot_real.ros2_control.xacro  cleanbot_real.urdf.xacro  ekf.yaml  ekf_sim.yaml
install/cleanbot_control/share/cleanbot_control/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/cleanbot_description/share/cleanbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cleanbot_navigation/lib/cleanbot_navigation/: navigation_mode_manager
install/cleanbot_navigation/share/cleanbot_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cleanbot_navigation/share/cleanbot_navigation/config/: amcl.yaml  nav2_params.yaml  slam_toolbox.yaml
install/cleanbot_navigation/share/cleanbot_navigation/launch/: localization_only.launch.py  navigation_bringup.launch.py  remote.launch.py  remote_rviz.launch.py  slam_only.launch.py  slam_with_control.launch.py
install/cleanbot_navigation/share/cleanbot_navigation/maps/: README.md
install/cleanbot_navigation/share/cleanbot_navigation/rviz/: nav2_default_view.rviz
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/cleanbot_control/: CMakeLists.txt  README.md  cleanbot_control.xml  package.xml  requirements.txt  前端手动控制修改说明.md  手动控制系统集成完成报告.md  手动控制节点说明.md  纵向位移控制修改说明.md  里程模式PID控制器详解.md
src/cleanbot_control/config/: cleanbot.ros2_control.xacro  cleanbot_controllers.yaml  cleanbot_gazebo.ros2_control.xacro  cleanbot_gazebo.urdf.xacro  cleanbot_real.ros2_control.xacro  cleanbot_real.urdf.xacro  ekf.yaml  manual_control_params.yaml  voice_control_params.yaml
src/cleanbot_control/include/cleanbot_control/: cleanbot_hardware_interface.hpp
src/cleanbot_control/launch/: cleanbot.launch.py  cleanbot_gazebo.launch.py
src/cleanbot_control/scripts/: laser_frame_relay.py  manual_control_node.py  test_manual_control.py  usb_communication_node.py  voice_control_node.py  web_control_node.py
src/cleanbot_control/src/: cleanbot_hardware_interface.cpp
src/cleanbot_control/web/static/: control.js
src/cleanbot_control/web/templates/: index.html
src/cleanbot_control/world/: simple_room.sdf  simple_room.world
src/cleanbot_description/: CMakeLists.txt  package.xml
src/cleanbot_description/config/: cleanbot_ros2_controller.yaml  display_robot_model.rviz
src/cleanbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/cleanbot_description/urdf/: clean_robot.urdf
src/cleanbot_description/urdf/cleanbot/: base.urdf.xacro  clean_robot.xacro  cleanbot.ros2_control.xacro
src/cleanbot_description/world/: custom_room.world
src/cleanbot_description/world/room/: model.sdf
src/cleanbot_navigation/: CMakeLists.txt  FRONTEND_INTEGRATION.md  INSTALL.md  README.md  README_CLEANING.md  coverage_planners_plugin.xml  package.xml  setup.cfg  setup.py
src/cleanbot_navigation/cleanbot_navigation/: cleaning_task_node.py  navigation_mode_manager.py
src/cleanbot_navigation/config/: amcl.yaml  cleaning_task_params.yaml  nav2_params.yaml  nav2_sim_params.yaml  slam_toolbox.yaml
src/cleanbot_navigation/include/cleanbot_navigation/: auto_coverage_planner.hpp  boustrophedon_planner.hpp  coverage_planner_base.hpp  edge_planner.hpp
src/cleanbot_navigation/launch/: localization_only.launch.py  navigation.launch.py  navigation_bringup.launch.py  navigation_sim.launch.py  remote.launch.py  remote_rviz.launch.py  slam_only.launch.py  slam_with_control.launch.py
src/cleanbot_navigation/maps/: README.md
src/cleanbot_navigation/rviz/: cleanbot_nav_view.rviz  nav2_default_view.rviz
src/cleanbot_navigation/scripts/: auto_test_cleaning.sh  test_cleaning.py  verify_installation.sh
src/cleanbot_navigation/src/: auto_coverage_planner.cpp  boustrophedon_planner.cpp  coverage_planner_base.cpp  edge_planner.cpp
src/rplidar_ros/launch/: rplidar_a1_launch.py
(+76 files in other folders)
